Ampliacion API
